syntax = "proto3";
option java_multiple_files = true;
package grpc;

import "google/protobuf/timestamp.proto";

message ArtifactHistoryProto {
  oneof identifier {
    int32 id = 1;
  }
  int32 artifact_id = 2;
  google.protobuf.Timestamp event_date = 3;
  string event_descriptions = 4;
  string involved_parties = 5;
}

message ArtifactHistoryResponse {
  ArtifactHistoryProto artifactHistoryProto = 1;
}

message CreateArtifactHistoryRequest {
  int32 artifactId = 1;
  ArtifactHistoryProto artifactHistoryProto = 2;
}

message GetArtifactHistoryByIdRequest {
  int32 id = 1;
}

message UpdateArtifactHistoryRequest {
  ArtifactHistoryProto artifactHistoryProto = 1;
}

message DeleteArtifactHistoryRequest {
  int32 id = 1;
}

message DeleteArtifactHistoryResponse {}

message GetAllArtifactHistoriesRequest {}